# lab4

./: .gitignore  Makefile  array_sequence.hpp  dynamic_array.hpp  exceptions.hpp  lazy_sequence.hpp  linked_list.hpp  list_sequence.hpp  sequence.hpp  statistics.hpp  stream.hpp
tests/: test_lazy_sequence_constructors.cpp  test_lazy_sequence_functions.cpp  test_lazy_sequence_methods.cpp  test_stream.cpp  tests_statistics.cpp
ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  resources.hpp
